<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fiftyfive"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_home_header"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="@dimen/sixty"
            android:layout_height="@dimen/fiftyfive"
            android:layout_alignBottom="@+id/image_back_icon"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/image_back_icon"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/selector_back_btn" />

        <ImageView
            android:id="@+id/image_back_icon"
            android:layout_width="@dimen/ninety"
            android:layout_height="@dimen/fiftyfive"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/five"
            android:layout_toRightOf="@+id/back_icon"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/selector_logo_btn" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutCatHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="@dimen/five"
        android:background="@drawable/selector_calendar_list_header" >

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/five"
            android:textColor="@color/white"
            android:textSize="@dimen/txt16" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonproceed"
        android:layout_below="@+id/layoutCatHeader"
        android:layout_marginLeft="@dimen/five"
        android:layout_marginRight="@dimen/five"
        android:fadeScrollbars="false"
        android:layout_marginTop="@dimen/two" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginRight="@dimen/five"
            android:layout_marginTop="@dimen/two"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/txt16" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:inputType="none"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewcredicardtypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/credit_card_types"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/txt16" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:background="@drawable/edittext_border"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinnerCreditCardTypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custome_spinner_background"
                    android:textColor="@color/add_prospect_text_color" />

                <ImageView
                    android:layout_width="@dimen/fifteen"
                    android:layout_height="@dimen/ten"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/five"
                    android:background="@drawable/ic_spinner_background"
                    android:contentDescription="@string/app_name" />
            </FrameLayout>

            <TextView
                android:id="@+id/textViewcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/cc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/txt16" />

            <EditText
                android:id="@+id/editTextcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:imeActionId="@+id/editTextExp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewexp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/exp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/txt16" />

            <EditText
                android:id="@+id/editTextExp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:imeActionId="@+id/editTextCcv"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:text="MM/YY"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewCcv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/ccv"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/txt16" />

            <EditText
                android:id="@+id/editTextCvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:imeActionId="@+id/editTextEmail"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/three"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/receipt_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/txt16" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonproceed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/forty"
        android:layout_above="@+id/keypadLayout"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/ten"
        android:background="@drawable/selector_prospect_save_button"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="@dimen/txt16" />

    <LinearLayout
        android:id="@+id/keypadLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/twohundred"
        android:layout_alignParentBottom="true"
        android:background="#5e92bd"
        android:orientation="vertical"
        android:padding="@dimen/ten" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyfive"
            android:orientation="horizontal"
            android:weightSum="3" >

            <Button
                android:id="@+id/button_one"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_two"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_three"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyfive"
            android:weightSum="3" >

            <Button
                android:id="@+id/button_four"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_five"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_six"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyfive"
            android:weightSum="3" >

            <Button
                android:id="@+id/button_seven"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_eight"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_nine"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyfive"
            android:orientation="horizontal"
            android:weightSum="3" >

            <Button
                android:id="@+id/button_double_zero"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/double_zero"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_zero"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/txt25"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/back_space_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:layout_weight="1"
                android:background="@drawable/selector_kep_pad"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewBackSpace"
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_margin="@dimen/three"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/ic_backspace" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>